@@ -20,5 +20,5 @@ public class MathJax {
 	public static native void rerenderMathJax (Element e) /*-{
 		$wnd.MathJax.Hub.Rerender(e);
 	}-*/;
-	
+
 }
