@@ -1,3 +1,4 @@
+2017-08-09 Fixed problem with double mathjax rendering in ordering module.
 2017-08-08 Added keyboard navigation (WCAG) to Source List module and draggable gaps in Text module
 2017-08-08 Added WCAG for GotoPageButton.
 2017-08-04 Added EOG event for Hangman addon
